# snowchallengebackend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3909be36aada_baseline.py
app/: .env  main.py  main_old.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: categories.py  login.py  sites.py  users.py
app/core/: config.py
app/crud/: base.py  crud_category.py  crud_favorite.py  crud_site.py  crud_site_image.py  crud_site_picture.py  crud_user.py
app/db/: base.py  init_db.py
app/models/: category.py  favorite.py  site.py  site_image.py  site_picture.py  user.py
app/schemas/: favorite.py  site.py  site_image.py  site_picture.py  user.py
app/services/storage/: s3.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_categories.py  test_login.py  test_sites.py  test_users.py
app/tests/crud/: test_category.py  test_favorite.py  test_site.py  test_site_picture.py  test_user.py
app/tests/utils/: category.py  site.py  user.py  utils.py
snow_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
